--- a/Styles/styleConsultV.css
+++ b/Styles/styleConsultV.css
@@ -1,6 +1,5 @@
 
 
-/* Style de la Navbar */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -36,7 +35,6 @@
   color: #f4a261;
 }
 
-/* Section des véhicules */
 .vehicles-section {
   padding: 3rem 2rem;
   text-align: center;
@@ -58,6 +56,7 @@
 .vehicle-card {
   background-color: white;
   height: 550px;
+  max-width: 400px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -100,7 +99,6 @@
   color: red;
 }
 
-/* Style du Footer */
 footer {
   background-color: #333;
   color: white;
@@ -132,4 +130,7 @@ footer p {
 /* Hover effect for the "Réserver maintenant" button */
 .vehicle-card .reserve-btn:hover {
   background-color: #218838; /* Légère variation de vert pour l'effet hover */
+}
+.pagination{
+  margin-top: 30px;
 }
